--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
     text-transform: capitalize;
     transition:all .2s linear;
     transition:width none;
+    padding-left: 1.5%;
+    padding-right: 2%;
+
+
+
+
 }
 
 
@@ -21,6 +27,7 @@ html{
 }
 
 .image{
-    height: 500px;
-    width: 500px;
+    height: 350px;
+    width: 350px;
+    border-radius: 50%;
 }
